fixed the image it is not responsive as expected time for the contact form

--- a/src/app/component-styles/website/_navigation-menu.scss
+++ b/src/app/component-styles/website/_navigation-menu.scss
@@ -69,6 +69,8 @@
 
 .colored-nav-bar {
   background-image: url("../../../assets/images/general/Background.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 @media (max-width: gs.$mobile) {
