--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -4,4 +4,6 @@
   display: flex;
   justify-items: center;
   justify-content: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
